修改mysql连接参数

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=8081
 server.servlet.session.timeout=900
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
-# Ó¦ÓÃ¼à¿Ø
+# application monitor
 spring.application.name=course-dev
 spring.boot.admin.client.url=http://118.24.83.137:8888
 management.server.address=127.0.0.1
