--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,7 +21,10 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 logging.level.xyz.kingsword.course.dao=debug
 logging.level.xyz.kingsword.course.service=debug
 #hikari
-spring.datasource.hikari.minimum-idle=50
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.max-lifetime=3600
+spring.datasource.hikari.idle-timeout=1800
 spring.datasource.hikari.connection-test-query=SELECT 1
 #pageHelper
 pagehelper.helperDialect=mysql
