--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -22,7 +22,9 @@ logging.level.xyz.kingsword.course.dao=debug
 logging.level.xyz.kingsword.course.service=debug
 #hikari
 spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.max-lifetime=3600
+spring.datasource.hikari.idle-timeout=1800
 
 spring.datasource.hikari.connection-test-query=SELECT 1
 #pageHelper
