--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,7 +13,7 @@ management.server.port=12580
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://120.79.31.239:3306/course2?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://120.79.31.239:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=UTC
 spring.datasource.username=course
 spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mapper/*.xml
