升级spring boot版本到2.3.0，替换ehcache

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,18 +2,14 @@ server.port=8081
 server.tomcat.max-connections=500
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
-# \u5E94\u7528\u76D1\u63A7
-spring.application.name=course-prod
-spring.boot.admin.client.url=http://114.116.125.186:8082
-management.server.address=127.0.0.1
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-management.endpoint.shutdown.enabled=true
-management.server.port=12580
+## 开启优雅停机, 如果不配置是默认IMMEDIATE, 立即停机
+server.shutdown=graceful
+## 优雅停机宽限期时间
+spring.lifecycle.timeout-per-shutdown-phase=20s
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://120.79.31.239:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://120.79.31.239:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=course
 spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -25,19 +21,12 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.max-lifetime=3600
 spring.datasource.hikari.idle-timeout=1800
-
 spring.datasource.hikari.connection-test-query=SELECT 1
 #pageHelper
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=false
 pagehelper.params=count=countSql
-#tomcat\u542F\u52A8\u6570\u636E\u538B\u7F29
-server.compression.enabled=true
-server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
-server.compression.min-response-size=1536
-# \u914D\u7F6Eehcache\u7F13\u5B58
-spring.cache.type=ehcache
-# \u6307\u5B9Aehcache\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
-spring.cache.ehcache.config=classpath:config/ehcache.xml
+# config
+config.purchaseStatus=false
 
