完善出库单和教材结算表

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,9 +9,9 @@ spring.lifecycle.timeout-per-shutdown-phase=20s
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://120.79.31.239:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=course
-spring.datasource.password=123456
+spring.datasource.password=yunb3306Mysql
 mybatis.mapper-locations=classpath:mapper/*.xml
 #logback
 logging.level.xyz.kingsword.course.dao=debug
@@ -19,8 +19,8 @@ logging.level.xyz.kingsword.course.service=debug
 #hikari
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.max-lifetime=3600
-spring.datasource.hikari.idle-timeout=1800
+spring.datasource.hikari.max-lifetime=360000
+spring.datasource.hikari.idle-timeout=100000
 spring.datasource.hikari.connection-test-query=SELECT 1
 #pageHelper
 pagehelper.helperDialect=mysql
