完善课程信息导入功能，模板已存templates文件夹

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,9 +2,9 @@ server.port=8081
 server.tomcat.max-connections=500
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
-## ¿ªÆôÓÅÑÅÍ£»ú, Èç¹û²»ÅäÖÃÊÇÄ¬ÈÏIMMEDIATE, Á¢¼´Í£»ú
+## å¼€å¯ä¼˜é›…åœæœº, å¦‚æœä¸é…ç½®æ˜¯é»˜è®¤IMMEDIATE, ç«‹å³åœæœº
 server.shutdown=graceful
-## ÓÅÑÅÍ£»ú¿íÏŞÆÚÊ±¼ä
+## ä¼˜é›…åœæœºå®½é™æœŸæ—¶é—´
 spring.lifecycle.timeout-per-shutdown-phase=20s
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
