--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.application.name=course-dev
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.32.6.221:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true
 spring.datasource.username=course
 spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mapper/*.xml
