--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,16 +2,19 @@ server.port=8081
 server.tomcat.max-connections=500
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
-## 开启优雅停机, 如果不配置是默认IMMEDIATE, 立即停机
+## \u5F00\u542F\u4F18\u96C5\u505C\u673A, \u5982\u679C\u4E0D\u914D\u7F6E\u662F\u9ED8\u8BA4IMMEDIATE, \u7ACB\u5373\u505C\u673A
 server.shutdown=graceful
-## 优雅停机宽限期时间
+## \u4F18\u96C5\u505C\u673A\u5BBD\u9650\u671F\u65F6\u95F4
 spring.lifecycle.timeout-per-shutdown-phase=20s
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=course
-spring.datasource.password=yunb3306Mysql
+#spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://loaclhost:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=course
+spring.datasource.username=root
+#spring.datasource.password=yunb3306Mysql
+spring.datasource.password=root
 mybatis.mapper-locations=classpath:mapper/*.xml
 #logback
 logging.level.xyz.kingsword.course.dao=debug
@@ -28,5 +31,6 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=false
 pagehelper.params=count=countSql
 # config
-config.purchaseStatus=false
+config.purchaseStatus=true
 
+logging.level.xyz=debug
