--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,7 @@ spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?u
 spring.datasource.username=course
 spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 #logback
 logging.level.xyz.kingsword.course.dao=debug
 logging.level.xyz.kingsword.course.service=debug
