--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -9,13 +9,14 @@ spring.lifecycle.timeout-per-shutdown-phase=20s
 #MyBatis
 mybatis.type-aliases-package=xyz.kingsword.course.pojo
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-spring.datasource.url=jdbc:mysql://loaclhost:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-#spring.datasource.username=course
-spring.datasource.username=root
-#spring.datasource.password=yunb3306Mysql
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://cdb-07bxmnxm.cd.tencentcdb.com:10022/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/course?useUnicode=true&characterEncoding=utf-8&useSSL=false&useAffectedRows=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=course
+#spring.datasource.username=root
+spring.datasource.password=yunb3306Mysql
+#spring.datasource.password=root
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 #logback
 logging.level.xyz.kingsword.course.dao=debug
 logging.level.xyz.kingsword.course.service=debug
@@ -31,6 +32,5 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=false
 pagehelper.params=count=countSql
 # config
-config.purchaseStatus=true
+config.purchaseStatus=false
 
-logging.level.xyz=debug
